--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "p5js-boilerplate",
     "version": "0.1.0",
-    "private": false,
+    "bin": "./bin/cli.js",
     "scripts": {
         "build": "node fileScraper.js"
     }
