--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "create-p5jsboiler",
-    "version": "0.1.1",
+    "version": "0.1.3",
     "bin": "./bin/cli.js",
     "scripts": {
-        "build": "node fileScraper.js"
+        "build": "node fileScraper.js",
+        "publish": "npm publish --access=public"
     }
 }
