--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "name": "create-p5jsboiler",
-    "version": "0.1.3",
+    "version": "0.1.17",
     "bin": "./bin/cli.js",
+    "homepage": "https://github.com/ZKitcher/create-p5jsBoiler",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ZKitcher/create-p5jsBoiler.git"
+    },
     "scripts": {
         "build": "node fileScraper.js",
-        "packet": "npm publish --access=public"
+        "publishNPM": "npm publish --access=public"
     }
 }
