--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-p5jsboiler",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "bin": "./bin/cli.js",
     "homepage": "https://github.com/ZKitcher/p5js-Boilerplate",
     "repository": {
@@ -10,5 +10,10 @@
     "scripts": {
         "build": "node fileScraper.js",
         "publishNPM": "npm publish --access=public"
-    }
+    },
+    "keywords": [
+        "p5js",
+        "p5js Boilerplate",
+        "Boilerplate"
+    ]
 }
